--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "react-simple-timefield": "^2.0.0",
-    "styled-components": "^2.4.0"
+    "styled-components": "^2.4.0",
+    "truffle-contract": "^3.0.5",
+    "web3": "0.20.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
